--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
+# Core
+spring.profiles.active=mysql
+
+# base end-points config
 api-endpoint = /api/v1
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/aniproject
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.security.user.name=admin
-spring.security.user.password=password
