--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,5 @@
-#base end-points config
+# Core
+spring.profiles.active=mysql
+
+# base end-points config
 api-endpoint = /api/v1
-
-# Using MySQL
-
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/aniproject
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-# server.port=8080
-
-# Configuración de Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-
-#Security
-# Configure default username and password
-spring.security.user.name=admin
-spring.security.user.password=password
